--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+SEOTitle: 鲁班的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: jy00126255@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 鲁班的博客, luban, 鲁班, 产品经理, 商业模式, 物联网, 车联网"
+keyword: "Lu Ban`s Blog, 鲁班的博客, luban, 鲁班, 产品经理, 商业模式, 物联网, 车联网"
 url: "http://flashpz.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/flashpz/flashpz.github.io.git" # you code repository
