--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: 鲁班的博客 | BY Blog
+title: LuBan Blog
+SEOTitle: 鲁班的博客 | LuBan Blog
 header-img: img/post-bg-desk.jpg
 email: jy00126255@gmail.com
 description: "Every failure is leading towards success."
